scss/style.css
/* ... */
@media screen and (max-width: 390.99px) {
  .top__section::before {
    height: 90vh;
    width: 100%;
    top: auto;
    right: 0;
    left: 0;
    bottom: 0;
  }
}
.herobanner {
  display: block;
  width: 100%;
  background-size: cover;
  position: relative;
  position: relative;
}
.herobanner img {
  position: relative;
  max-width: 100%;
  width: 100%;
}
.herobanner .herobanner-content {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
}
.herobanner .herobanner-content .herobanner-topheading {
  display: block;
  margin: 400px 0 0 0;
  color: var(--white);
}
@media (max-width: 1400px) {
  .herobanner .herobanner-content .herobanner-topheading {
    margin: 300px 0 0 0;
  }
}
@media (max-width: 1200px) {
  .herobanner .herobanner-content .herobanner-topheading {
    margin: 250px 0 0 0;
  }
}
@media (max-width: 992px) {
  .herobanner .herobanner-content .herobanner-topheading {
    margin: 150px 0 0 0;
  }
}
@media (max-width: 767px) {
  .herobanner .herobanner-content .herobanner-topheading {
    margin: 70px 0 0 0;
  }
}
.herobanner .herobanner-content .herobanner-topheading h2 {
  font-size: 20px;
  margin-bottom: 50px;
}
@media (max-width: 1200px) {
  .herobanner .herobanner-content .herobanner-topheading h2 {
    margin-bottom: 20px;
  }
}
.herobanner .herobanner-content .herobanner-topheading h1 {
  font-size: 60px;
}
@media (max-width: 992px) {
  .herobanner .herobanner-content .herobanner-topheading h1 {
    font-size: 50px;
  }
}
@media (max-width: 767px) {
  .herobanner .herobanner-content .herobanner-topheading h1 {
    font-size: 36px;
  }
}
@media (max-width: 600px) {
  .herobanner .herobanner-content .herobanner-topheading h1 {
    font-size: 24px;
  }
}

.whatwedo-wrapper {
  display: block;
  width: 100%;
  background: #122d6e url(../images/misglobelarge.png) no-repeat top right;
  padding: 50px 0 100px;
  min-height: 1000px;
  color: var(--white);
}
@media (max-width: 992px) {
  .whatwedo-wrapper {
    background: #122d6e;
    min-height: 600px;
  }
}
.whatwedo-wrapper h2 {
  font-size: 33px;
  font-weight: 500;
  color: #fff;
  margin-bottom: 50px;
  position: relative;
  padding-left: 110px;
  text-transform: unset;
  margin-top: 50px;
}
@media (min-width: 1300px) and (max-width: 1400px) {
  .whatwedo-wrapper h2 {
    font-size: 33px;
  }
}
@media (min-width: 1200px) and (max-width: 1300px) {
  .whatwedo-wrapper h2 {
    font-size: 30px;
  }
}
@media (min-width: 1100px) and (max-width: 1200px) {
  .whatwedo-wrapper h2 {
    font-size: 28px;
  }
}
@media (min-width: 992px) and (max-width: 1100px) {
  .whatwedo-wrapper h2 {
    font-size: 24px;
  }
}
@media (max-width: 991px) {
  .whatwedo-wrapper h2 {
    font-size: 22px;
  }
}
@media (max-width: 600px) {
  .whatwedo-wrapper h2 {
    font-size: 18px;
    letter-spacing: 3px;
    line-height: 24px;
  }
}
.whatwedo-wrapper h2::after {
  content: "";
  position: absolute;
  width: 50px;
  height: 3px;
  background: var(--light-green);
  left: 0;
  top: 20px;
}
.whatwedo-wrapper h2::before {
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  background: url(../images/logowhitecircle.svg) no-repeat 0 0;
  left: 60px;
  top: 6px;
}
.whatwedo-wrapper p {
  font-size: 20px;
  margin-bottom: 20px;
  line-height: 30px;
  padding-left: 110px;
}
@media (max-width: 992px) {
  .whatwedo-wrapper p {
    padding-left: 0;
  }
}

.ourindustry-wrapper {
  width: 100%;
  display: block;
  padding: 100px 0 0;
  position: relative;
}
.ourindustry-wrapper::before {
  content: "";
  position: absolute;
  width: 1000px;
  height: 200px;
  background: #81c357;
  top: 0;
  right: 0;
}
@media (max-width: 1700px) {
  .ourindustry-wrapper::before {
    width: 900px;
  }
}
@media (max-width: 1600px) {
  .ourindustry-wrapper::before {
    width: 800px;
  }
}
@media (max-width: 1400px) {
  .ourindustry-wrapper::before {
    width: 700px;
  }
}
@media (max-width: 1200px) {
  .ourindustry-wrapper::before {
    width: 600px;
    height: 130px;
  }
}
@media (max-width: 992px) {
  .ourindustry-wrapper::before {
    display: none;
  }
}
.ourindustry-wrapper h2 {
  font-size: 30px;
  color: var(--dark-blue-color);
  padding-left: 100px;
  position: relative;
  text-transform: unset;
  margin-bottom: 50px;
  margin-top: 150px;
}
@media (max-width: 767px) {
  .ourindustry-wrapper h2 {
    padding-left: 120px;
    font-size: 20px;
    letter-spacing: 0;
    padding-top: 10px;
  }
}
.ourindustry-wrapper h2::after {
  content: "";
  position: absolute;
  width: 50px;
  height: 4px;
  background: var(--light-green);
  left: 0;
  top: 19px;
}
@media (max-width: 767px) {
  .ourindustry-wrapper h2::after {
    left: 20px;
  }
}
.ourindustry-wrapper h2::before {
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  background: url(../images/logocolorcircle.svg) no-repeat 0 0;
  left: 60px;
  top: 6px;
}
@media (max-width: 767px) {
  .ourindustry-wrapper h2::before {
    left: 80px;
  }
}
.ourindustry-wrapper .industry--carousel-content-wrapper {
  display: block;
  width: 100%;
  padding-left: 100px;
  min-height: 600px;
}
@media (max-width: 1200px) {
  .ourindustry-wrapper .industry--carousel-content-wrapper {
    min-height: 400px;
    padding-bottom: 50px;
  }
}
@media (max-width: 992px) {
  .ourindustry-wrapper .industry--carousel-content-wrapper {
    padding-left: 0;
  }
}
.ourindustry-wrapper .industry--carousel-content-wrapper .industry--carousel-content {
  display: none;
}
.ourindustry-wrapper .industry--carousel-content-wrapper .industry--carousel-content.active {
  display: block;
}
.ourindustry-wrapper .industry--carousel-content-wrapper .industry--carousel-content h3 {
  font-size: 33px;
  margin-bottom: 10px;
  color: var(--dark-blue-color);
}
.ourindustry-wrapper .industry--carousel-content-wrapper .industry--carousel-content p {
  font-size: 18px;
  margin-bottom: 20px;
  line-height: 30px;
}
/* ... */

